# submitqueue

./: .bazelrc  .envrc  .gitignore  .yamlfmt  AGENTS.md  BUILD.bazel  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  go.mod  go.sum  proto_v2_test.md
consumer/: BUILD.bazel  consumer.go  consumer_test.go  controller.go
core/consumer/: BUILD.bazel  README.md  consumer.go  consumer_test.go  controller.go  error.go  error_test.go  registry.go  registry_test.go
core/consumer/mock/: BUILD.bazel  controller_mock.go
core/errs/: BUILD.bazel  README.md  errs.go  errs_test.go  processor_test.go
core/errs/generic/: BUILD.bazel  generic.go  generic_test.go
core/errs/mysql/: BUILD.bazel  mysql.go  mysql_test.go
core/httpclient/: BUILD.bazel  transport.go  transport_test.go
core/metrics/: BUILD.bazel  README.md  metrics.go  metrics_test.go
core/request/: BUILD.bazel  log.go  log_test.go  request.go  request_test.go
core/speculation/: BUILD.bazel  exhaustive.go  exhaustive_test.go  shadow_strategy.go  shadow_strategy_test.go  speculation.go  speculation_test.go  speculator.go  speculator_test.go  strategy.go  topk.go  topk_strategy.go  topk_strategy_test.go  topk_test.go
core/speculation/mock/: BUILD.bazel
e2e_test/: BUILD.bazel  README.md  servers.go  suite_test.go
e2e_test/queue/: BUILD.bazel  queue_test.go
e2e_test/testutil/: BUILD.bazel  mysql.go
entities/: BUILD.bazel  request.go  request_test.go
entities/queue/: BUILD.bazel  message.go  message_test.go
entities/storage/: BUILD.bazel  land_request.go
entity/: BUILD.bazel  batch.go  batch_dependent.go  batch_test.go  build.go  build_test.go  cancel.go  cancel_test.go  change_provider.go  change_record.go  entity.go  land_entry.go  land_request_test.go  queue_config.go  queue_config_test.go  request.go  request_log.go  request_log_test.go  request_test.go  speculation_tree.go
entity/change/: BUILD.bazel  change.go
entity/change/changeutil/: BUILD.bazel  hex.go
entity/change/git/: BUILD.bazel  change_id.go  change_id_test.go
entity/change/github/: BUILD.bazel  change_id.go
entity/change/phabricator/: BUILD.bazel  change_id.go
entity/github/: BUILD.bazel  change_id.go  change_id_test.go
entity/mergestrategy/: BUILD.bazel
entity/messagequeue/: BUILD.bazel
entity/phabricator/: BUILD.bazel  change_id.go  change_id_test.go
entity/queue/: BUILD.bazel  message.go  message_test.go
entity/queueconfig/: BUILD.bazel  queueconfig.go  queueconfig_test.go
extension/counter/: BUILD.bazel  README.md  counter.go
extension/counter/mock/: BUILD.bazel
extension/counter/mysql/: BUILD.bazel  counter.go
extension/landprovider/: BUILD.bazel  errors.go  land_entry.go  land_provider.go
extension/landprovider/github/: BUILD.bazel  land.go  land_test.go  merge.go  merge_test.go  validate.go  validate_test.go
extension/landprovider/mock/: BUILD.bazel  land_provider_mock.go
extension/mergechecker/: BUILD.bazel  mergechecker.go  multi.go  multi_test.go
extension/mergechecker/github/: BUILD.bazel  checker.go  checker_test.go  graphql.go  graphql_test.go  validate.go  validate_test.go
extension/mergechecker/mock/: BUILD.bazel  mergechecker_mock.go
extension/messagequeue/: BUILD.bazel  README.md  delivery.go  publisher.go  subscription_config.go  subscription_config_test.go
extension/messagequeue/mock/: BUILD.bazel  delivery_mock.go  publisher_mock.go  queue_mock.go  subscriber_mock.go
extension/messagequeue/mysql/: BUILD.bazel  README.md  delivery_state_store.go  delivery_state_store_test.go  message_store.go  message_store_test.go  mock_stores.go  offset_store.go  partition_lease_store.go  partition_lease_store_test.go  publisher.go  publisher_test.go  sql.go  sql_test.go  stores.go  subscriber.go  subscriber_test.go  (+2 more)
extension/queue/: BUILD.bazel  README.md  delivery.go  publisher.go  queue.go  subscriber.go  subscription_config.go  subscription_config_test.go
extension/scorer/: BUILD.bazel  scorer.go
extension/storage/: BUILD.bazel  batch_dependent_store.go  batch_store.go  build_store.go  change_provider_store.go  request_log_store.go  request_store.go  speculation_tree_store.go  storage.go
extensions/queue/: BUILD.bazel  README.md  delivery.go  publisher.go  queue.go  subscriber.go
gateway/controller/: BUILD.bazel  cancel.go  cancel_test.go  land.go  land_test.go  ping.go  ping_test.go  status.go  status_test.go
gateway/proto/: BUILD.bazel  gateway.proto
integration_tests/: BUILD.bazel  README.md  land_test.go  mysql.go  ping_test.go  servers.go  suite_test.go
integration_tests/queue/: BUILD.bazel  queue_test.go
integration_tests/testutil/: BUILD.bazel  docker.go  mysql.go
orchestrator/: BUILD.bazel  README.md
orchestrator/controller/: BUILD.bazel  ping.go  ping_test.go
orchestrator/integration_test/: BUILD.bazel  ping_test.go
orchestrator/integration_tests/: BUILD.bazel  ping_test.go
orchestrator/proto/: BUILD.bazel  orchestrator.proto
orchestrator/protopb/: BUILD.bazel  orchestrator.pb.go  orchestrator.pb.yarpc.go  orchestrator_grpc.pb.go
sqsim/: BUILD.bazel  IMPLEMENTATION.md  README.md  behavior.go  behavior_test.go  buildrunner.go  buildrunner_test.go  fault.go  fault_test.go  land.go  land_test.go  merger.go  merger_test.go  scenario.go  scenario_test.go  types.go  validation.go  validation_test.go
sqsim/entity/: BUILD.bazel  behavior.go  behavior_test.go  scenario.go  scenario_test.go
sqsim/model/: BUILD.bazel  clock.go  clock_test.go  error.go  error_test.go  profile.go  profile_test.go  runtime.go  runtime_test.go  sequence.go  sequence_test.go  state.go  state_test.go  timeline.go  timeline_test.go  uri.go  uri_test.go
sqsim/runner/: BUILD.bazel  grpc.go  grpc_test.go  local.go  local_test.go  runner.go  runner_test.go  text.go  text_test.go
sqsim/scenarios/: BUILD.bazel  failure.go  failure_test.go  happy_path.go  happy_path_test.go  load.go  load_test.go  mixed.go  mixed_test.go  recovery.go  recovery_test.go  registry.go  registry_test.go
sqsim/tui/: BUILD.bazel  stage.go  stage_test.go  tui.go  tui_test.go
(+1513 files in other folders)
