load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/uber/submitqueue

# Exclude nested worktrees (created under .claude/worktrees) so gazelle does not
# index them as duplicate rule definitions and corrupt the canonical BUILD files.
# gazelle:exclude .claude

# Disable Gazelle proto rule generation globally. We rely on the checked-in
# .pb.go files in protopb/ dirs (plain go_library) rather than Bazel proto
# compilation. This avoids proto_library → @protobuf// transitive loads that
# break in consumers using newer Bazel versions (e.g. go-code's Bazel 8.5.1
# removed native.java_proto_library), and eliminates the duplicate-importpath
# aliases that required gazelle:resolve workarounds.
# gazelle:proto disable_global

# Export marker files for test data dependencies (used by FindRepoRoot in tests)
exports_files(
    [
        "MODULE.bazel",
        "go.mod",
    ],
    visibility = ["//visibility:public"],
)

gazelle(name = "gazelle")
