load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "consumer",
    srcs = [
        "consumer.go",
        "controller.go",
    ],
    importpath = "github.com/uber/submitqueue/consumer",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/queue",
        "//extension/queue",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "consumer_test",
    srcs = ["consumer_test.go"],
    embed = [":consumer"],
    deps = [
        "//entity/queue",
        "//extension/queue",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_zap//zaptest",
    ],
)
