load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "entity",
    srcs = [
        "batch.go",
        "change_provider.go",
        "request.go",
    ],
    importpath = "github.com/uber/submitqueue/entity",
    visibility = ["//visibility:public"],
)

go_test(
    name = "entity_test",
    srcs = ["request_test.go"],
    embed = [":entity"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
