load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "entity",
    srcs = [
        "batch.go",
        "batch_dependent.go",
        "build.go",
        "cancel.go",
        "change_provider.go",
        "queue_config.go",
        "request.go",
        "speculation_tree.go",
    ],
    importpath = "github.com/uber/submitqueue/entity",
    visibility = ["//visibility:public"],
)

go_test(
    name = "entity_test",
    srcs = [
        "batch_test.go",
        "build_test.go",
        "cancel_test.go",
        "request_test.go",
    ],
    embed = [":entity"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
