# gazelle:ignore

load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "e2e_test",
    srcs = ["ping_test.go"],
    # End-to-end tests require all servers to be running
    # They validate the entire system working together
    tags = [
        "e2e",
        "integration",
        "manual",
    ],
    deps = [
        "//gateway/protopb",
        "//orchestrator/protopb",
        "//speculator/protopb",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_test(
    name = "land_integration_test",
    srcs = [
        "land_test.go",
        "mysql.go",
    ],
    data = ["//extensions/storage/mysql/schema"],
    tags = [
        "integration",
    ],
    deps = [
        "//extensions/storage/mysql",
        "//gateway/controller",
        "//gateway/protopb",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_stretchr_testify//require",
        "@com_github_testcontainers_testcontainers_go_modules_mysql//:mysql",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_zap//:zap",
    ],
)
