# gazelle:ignore

load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    srcs = [
        "mysql.go",
        "servers.go",
        "suite_test.go",
    ],
    data = [
        "//extensions/counter/mysql/schema",
        "//extensions/storage/mysql/schema",
        "//examples/server/gateway",
        "//examples/server/orchestrator",
        "//examples/server/speculator",
    ],
    tags = ["integration"],
    deps = [
        "//gateway/protopb",
        "//orchestrator/protopb",
        "//speculator/protopb",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_stretchr_testify//suite",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//network",
        "@com_github_testcontainers_testcontainers_go//wait",
        "@com_github_testcontainers_testcontainers_go_modules_mysql//:mysql",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
