load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "orchestrator",
    srcs = [],
    importpath = "github.com/uber/submitqueue/orchestrator",
    visibility = ["//visibility:public"],
    deps = [
        "//orchestrator/core/controller",
        "//orchestrator/protopb",
    ],
)
