load("@rules_go//go:def.bzl", "go_library", "go_test")

exports_files(
    ["controller.go"],
    visibility = ["//core/consumer/mock:__pkg__"],
)

go_library(
    name = "consumer",
    srcs = [
        "consumer.go",
        "controller.go",
        "error.go",
        "registry.go",
    ],
    importpath = "github.com/uber/submitqueue/core/consumer",
    visibility = ["//visibility:public"],
    deps = [
        "//entity/queue",
        "//extension/queue",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "consumer_test",
    srcs = [
        "consumer_test.go",
        "error_test.go",
        "registry_test.go",
    ],
    embed = [":consumer"],
    deps = [
        "//core/consumer/mock",
        "//entity/queue",
        "//extension/queue",
        "//extension/queue/mock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//zaptest",
    ],
)
