load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "httpclient",
    srcs = ["transport.go"],
    importpath = "github.com/uber/submitqueue/core/httpclient",
    visibility = ["//visibility:public"],
)

go_test(
    name = "httpclient_test",
    srcs = ["transport_test.go"],
    embed = [":httpclient"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
