load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "metrics",
    srcs = ["metrics.go"],
    importpath = "github.com/uber/submitqueue/core/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//core/errs",
        "@com_github_uber_go_tally//:tally",
    ],
)

go_test(
    name = "metrics_test",
    srcs = ["metrics_test.go"],
    embed = [":metrics"],
    deps = [
        "//core/errs",
        "@com_github_stretchr_testify//assert",
        "@com_github_uber_go_tally//:tally",
    ],
)
