load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "request",
    srcs = [
        "log.go",
        "request.go",
    ],
    importpath = "github.com/uber/submitqueue/core/request",
    visibility = ["//visibility:public"],
    deps = [
        "//core/consumer",
        "//entity",
        "//entity/queue",
        "//extension/storage",
    ],
)

go_test(
    name = "request_test",
    srcs = [
        "log_test.go",
        "request_test.go",
    ],
    embed = [":request"],
    deps = [
        "//core/consumer",
        "//entity",
        "//entity/queue",
        "//extension/queue/mock",
        "//extension/storage",
        "//extension/storage/mock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)
