load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "queue",
    srcs = ["message.go"],
    importpath = "github.com/uber/submitqueue/entity/queue",
    visibility = ["//visibility:public"],
)

go_test(
    name = "queue_test",
    srcs = ["message_test.go"],
    embed = [":queue"],
    deps = ["@com_github_stretchr_testify//assert"],
)
