load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "queueconfig",
    srcs = ["queueconfig.go"],
    importpath = "github.com/uber/submitqueue/entity/queueconfig",
    visibility = ["//visibility:public"],
)

go_test(
    name = "queueconfig_test",
    srcs = ["queueconfig_test.go"],
    embed = [":queueconfig"],
    deps = ["@com_github_stretchr_testify//assert"],
)
