load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mergechecker",
    srcs = [
        "mergechecker.go",
        "multi.go",
    ],
    importpath = "github.com/uber/submitqueue/extension/mergechecker",
    visibility = ["//visibility:public"],
    deps = ["//entity"],
)

go_test(
    name = "mergechecker_test",
    srcs = ["multi_test.go"],
    embed = [":mergechecker"],
    deps = [
        "//entity",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
