load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = [
        "change_provider_store.go",
        "request_store.go",
        "storage.go",
    ],
    importpath = "github.com/uber/submitqueue/extension/storage",
    visibility = ["//visibility:public"],
    deps = ["//entity"],
)
