load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = [
        "cancel.go",
        "land.go",
        "ping.go",
    ],
    importpath = "github.com/uber/submitqueue/gateway/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//core/errs",
        "//core/metrics",
        "//entity",
        "//entity/queue",
        "//extension/counter",
        "//extension/queue",
        "//gateway/protopb",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "controller_test",
    srcs = [
        "cancel_test.go",
        "land_test.go",
        "ping_test.go",
    ],
    embed = [":controller"],
    deps = [
        "//entity",
        "//entity/queue",
        "//extension/counter/mock",
        "//extension/queue/mock",
        "//gateway/protopb",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//:zap",
    ],
)
