load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = [
        "land.go",
        "ping.go",
    ],
    importpath = "github.com/uber/submitqueue/gateway/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//core/errs",
        "//entity",
        "//entity/queue",
        "//extension/counter",
        "//extension/queue",
        "//extension/storage",
        "//gateway/protopb",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "controller_test",
    srcs = [
        "land_test.go",
        "ping_test.go",
    ],
    embed = [":controller"],
    deps = [
        "//entity",
        "//entity/queue",
        "//extension/counter/mock",
        "//extension/queue/mock",
        "//extension/storage/mock",
        "//gateway/protopb",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_uber_go_tally_v4//:tally",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//:zap",
    ],
)
