load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "gatewaypb_proto",
    srcs = ["gateway.proto"],
    visibility = ["//visibility:public"],
)

# keep
# Used for regenerating .pb.go files in ../protopb/
# The actual go_library is in //gateway/protopb:protopb
go_proto_library(
    name = "gatewaypb_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/uber/submitqueue/gateway/protopb",
    proto = ":gatewaypb_proto",
    visibility = ["//visibility:public"],
)
